# utec-eda

./: .gitmodules  CMakeLists.txt  README.md
Google_tests/: CMakeLists.txt
Google_tests/bsptree/: test.cpp
Google_tests/quadtree/: test.cpp
Google_tests/sstree/: test.cpp
include/: bsptree.h  data.h  datatype.h  line.h  particle.h  plane.h  point.h  quadnode.h  quadtree.cpp  quadtree.h  rect.h  sstree.h
src/: bsptree.cpp  datatype.cpp  particle.cpp  plane.cpp  point.cpp  quadnode.cpp  quadtree.cpp  rect.cpp  sstree.cpp  test.cpp
test/: main.cpp  sstree_test.cpp
